# HabitKicker

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: habitkicker_settings.json
habitbreaker/: __init__.py  camera.py  main.py
habitbreaker/config/: __init__.py  landmark_config.py
habitbreaker/detectors/: __init__.py  habit_detector.py  slouch_detector.py
habitbreaker/utils/: __init__.py  mediapipe_handler.py  screen_overlay.py
habitkicker/: __init__.py  camera.py  gui.py  main.py
habitkicker/config/: __init__.py
habitkicker/detectors/: __init__.py  habit_detector.py  slouch_detector.py
habitkicker/gui/: gui.py
habitkicker/utils/: __init__.py  mediapipe_handler.py  screen_overlay.py
src/model/: Camera.py  HabitDetector.py
