[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "habitkicker"
version = "0.1.0"
description = "A computer vision application to detect and break unwanted habits like nail-biting, hair-pulling, and slouching using posture analysis"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0",
    "PyQt6>=6.4.0",
    "QDarkStyle>=3.1.0",
    "pygame>=2.1.0"
]

[project.scripts]
habitkicker = "habitkicker.main:main"

[tool.setuptools]
packages = ["habitkicker"] 